--- a/ui/style.css
+++ b/ui/style.css
@@ -28,6 +28,8 @@ body {
     row-gap: 1rem;
     width: 100%;
     padding: 1rem;
+    grid-auto-columns: 1fr;
+    grid-auto-rows: 1fr;
 }
 
 .grid__item {
